[package]
name = "passkeep"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
base64ct = "1"
hex = "0.4"
aes-gcm = "0.10.3"
dirs = "6.0.0"
serde_json = "1.0.140"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
rpassword = "7.4.0"


